# sparse-text-kmeans

./: .gitignore  CLAUDE.md  CMakeLists.txt  CP-HNSW-implementation-plan.md  CP-HNSW.md  README.md  REVIEW_PLAN.md  REVIEW_RESULTS.md  TECHNICAL_REFERENCE.md  custom_kmeans.py  implementation_plan.md  pyproject.toml  quantized_HNSW.md  requirements.txt
arXiv-1509.02897v1/: appendix_experiments.tex  appendix_gaussian.tex  cp_analysis.tex  intro.tex  latex_definitions.tex  multiprobe.tex  related.tex
arXiv-1603.09320/: technical_details_1.tex
cp-hnsw/: CMakeLists.txt  README.md
cp-hnsw/evaluation/: eval_comprehensive.cpp  eval_sift.cpp  test_correlation.cpp  test_tiered.cpp
cp-hnsw/evaluation/datasets/: dataset_loader.hpp
cp-hnsw/include/cphnsw/algorithms/: insert.hpp  knn_search.hpp  search_layer.hpp  select_neighbors.hpp
cp-hnsw/include/cphnsw/core/: types.hpp
cp-hnsw/include/cphnsw/cuda/: gpu_encoder.cuh
cp-hnsw/include/cphnsw/distance/: hamming.hpp
cp-hnsw/include/cphnsw/graph/: flat_graph.hpp  priority_queue.hpp
cp-hnsw/include/cphnsw/index/: cp_hnsw_index.hpp
cp-hnsw/include/cphnsw/quantizer/: cp_encoder.hpp  hadamard.hpp  rotation_chain.hpp
cp-hnsw/tests/unit/: test_hadamard.cpp
eval/: __init__.py  data.py  evaluation.py  experiment_configs.py  metrics.py  run_experiments.py  significance.py
evaluation/: __init__.py  bench_quick.cpp  debug_code_storage.cpp  debug_estimator.cpp  debug_gpu_knn.cpp  debug_recall.cpp  eval_comprehensive.cpp  eval_gpu_benchmark.cpp  eval_main.cpp  eval_master.cpp  eval_sift.cpp  eval_sift_gpu.cpp  qa_protocol.cpp  test_correlation.cpp  test_gpu_build.cpp  test_k_variants.cpp  test_tiered.cpp
evaluation/baselines/: __init__.py  run_faiss.py
evaluation/datasets/: dataset_loader.hpp
evaluation/metrics/: recall.hpp
evaluation/results/: ANALYSIS_AND_LATEX.md  FINAL_PORTFOLIO_RESULTS.md  cphnsw_tables.tex  gpu_benchmark_comparison.csv  resolution_ceiling.csv
evaluation/results/k16/: log.txt
evaluation/results/k16/exp1_recall_qps/: cphnsw_results.csv
evaluation/results/k16/exp3_ablation/: topology_comparison.csv
evaluation/results/k32/: log.txt
evaluation/results/k32/exp1_recall_qps/: cphnsw_results.csv
evaluation/results/k32/exp2_scalability/: thread_scaling.csv
evaluation/results/k32/exp3_ablation/: topology_comparison.csv
evaluation/results/k32/exp4_correlation/: correlation_data.csv
evaluation/results/k32/exp5_memory/: memory_breakdown.csv
evaluation/results/k64/: log.txt
evaluation/results/k64/exp1_recall_qps/: cphnsw_results.csv
evaluation/results/k64/exp3_ablation/: topology_comparison.csv
evaluation/scripts/: __init__.py  download_datasets.sh  plot_results.py  run_full_evaluation.sh
evaluation/utils/: common.hpp
include/cphnsw/algorithms/: aitq_search_layer.hpp  insert.hpp  knn_search.hpp  rank_pruning.hpp  search_layer.hpp  search_layer_policy.hpp  select_neighbors.hpp
include/cphnsw/api/: config.hpp  index.hpp
include/cphnsw/calibration/: calibrated_distance.hpp  finger_calibration.hpp
include/cphnsw/core/: codes.hpp  debug.hpp  memory.hpp  types.hpp
include/cphnsw/cuda/: gpu_encoder.cuh  gpu_knn_graph.cuh  gpu_search.cuh
include/cphnsw/distance/: hamming.hpp  metric_policy.hpp
include/cphnsw/distance/detail/: avx2_kernels.hpp  avx512_kernels.hpp  scalar_kernels.hpp
include/cphnsw/encoder/: cp_encoder.hpp  rotation.hpp
include/cphnsw/encoder/transform/: fht.hpp
include/cphnsw/graph/: aitq_graph.hpp  flat_graph.hpp  neighbor_block.hpp  visitation_table.hpp
include/cphnsw/index/: aitq_policy_index.hpp  cp_hnsw_index.hpp  policy_index.hpp  residual_index.hpp
include/cphnsw/quantizer/: aitq_quantizer.hpp  cp_encoder.hpp  cp_fht_policy.hpp  multiprobe.hpp  quantizer_policy.hpp  residual_encoder.hpp
include/cphnsw/search/: search_engine.hpp
research_results/: count_binary_results.json  summary.json  summary_smoke.json  tfidf_bigram_results.json  tfidf_default_results.json
resources/arXiv-2206.11408v1/: neurips_2022.tex
resources/arXiv-2308.15136v2/: main.tex
resources/arXiv-2311.18724v1/: consolidated.tex
resources/arXiv-2312.16335v2/: consolidated.tex
resources/arXiv-2405.12497v1/: consolidated.tex
resources/arXiv-2409.17066v2/: consolidated.tex
resources/arXiv-2412.01940v3/: example_paper.tex
resources/arXiv-2502.18113v1/: flash-consolidated.tex
resources/cross-polytope-lsh/: appendix_lower.tex  appendix_upper.tex  consolidated.tex  experiments.tex  lower_bound.tex  main.tex  prelim.tex
src/cuda/: gpu_encoder.cu  gpu_knn_graph.cu  gpu_search.cu
tests/unit/: test_flash_kernels.cpp  test_go_nogo_verification.cpp  test_hadamard.cpp  test_phase2_integration.cpp  test_rabitq_distance.cpp  test_recall_diagnostic.cpp  test_residual_distance.cpp  test_unified_distance.cpp
