[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cp-hnsw"
version = "1.0.0"
description = "Cross-Polytope HNSW - Memory-efficient approximate nearest neighbor search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ann", "nearest-neighbor", "hnsw", "lsh", "cross-polytope", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies required for all Python scripts
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
# FAISS baseline comparison (CPU-only via pip)
# For GPU support, use: conda install -c pytorch -c nvidia faiss-gpu
faiss = [
    "faiss-cpu>=1.7.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "faiss-cpu>=1.7.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
# Command-line entry points for evaluation scripts
cp-hnsw-plot = "evaluation.scripts.plot_results:main"
cp-hnsw-faiss = "evaluation.baselines.run_faiss:main"

[project.urls]
Homepage = "https://github.com/user/cp-hnsw"
Documentation = "https://github.com/user/cp-hnsw#readme"
Repository = "https://github.com/user/cp-hnsw"

[tool.setuptools]
packages = ["evaluation", "evaluation.scripts", "evaluation.baselines"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
